--- a/src/styles/blocks/social.sass
+++ b/src/styles/blocks/social.sass
@@ -27,6 +27,9 @@
 
 .social--linkedin
   background-image: url('https://cdn.rawgit.com/encharm/Font-Awesome-SVG-PNG/master/black/svg/linkedin.svg')
+
+.social--link
+  background-image: url('https://cdn.rawgit.com/encharm/Font-Awesome-SVG-PNG/master/black/svg/link.svg')
 @media screen and (min-width: 900px)
   .social
     width: 40px
