--- a/src/styles/blocks/sidebar.sass
+++ b/src/styles/blocks/sidebar.sass
@@ -2,7 +2,7 @@
   margin-bottom: 20px
 
   a
-    font-size: 18px
+    // font-size: 18px
     text-transform: uppercase
     font-weight: bold
     text-decoration: none
@@ -13,7 +13,7 @@
 
 .sidebar__intro
   color: $light-body-color
-  font-size: 14px
+  // font-size: 14px
   margin-bottom: 20px
 
   p
