Add css in index.sass

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -10,3 +10,9 @@
 @import "./blocks/social"
 @import "../../node_modules/slick-carousel/slick/slick.css"
 @import "../../node_modules/slick-carousel/slick/slick-theme.css"
+
+figure.card
+  margin: 0
+.text-align-center
+  text-align:center
+  
