--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -13,6 +13,19 @@
 
 figure.card
   margin: 0
+
 .text-align-center
-  text-align:center
-  
+  text-align: center
+
+.button-xlarge
+  font-size: 125% !important
+
+.avatar
+  display: block
+  margin-left: auto
+  margin-right: auto
+  margin-bottom: 1rem
+  vertical-align: middle
+  width: 10rem
+  height: 10rem
+  border-radius: 50%
